testsuite/bsc.typechecker/typeclasses/ATFUnifyError.bs
package ATFUnifyError where

-- Test that unification of a type function application with a concrete type
-- fails when the needed class context is missing.

class Container f e | f -> e where
  type Elem f = e
  wrap   :: e -> f
  unwrap :: f -> e

data Box a = Box a

instance Container (Box a) a where
  wrap = Box
  unwrap (Box x) = x

-- Reading a struct field whose type is Elem f, and assigning to Bool,
-- requires Container f Bool which is not in scope.
struct Holder f =
  val :: Elem f

getBool :: Holder a -> Bool
getBool h = h.val
